cambios en los html productos, contacto y registro

--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,19 @@
 <main class="container">
   <!-- HERO / título de contacto -->
   <section class="contact-hero">
+      <nav class="main-nav">
+        <a href="index.html">Inicio</a>
+        <a href="productos.html" class="active">Productos</a>
+        <a href="registro.html">Registro</a>
+        <a href="'contacto.html">Contacto</a>
+      </nav>
+      <div class="session">
+        <a href="iniciar sesion.html">Iniciar sesión</a> | 
+        <a href="registro.html">Registrar usuario</a>
+        <a href="carrito.html" class="cart">Carrito 🛒 (0)</a> <!-- Carrito con contador -->
+      </div>
+    </div>
+    <link rel="stylesheet" href="assets/css/style.css" />
     <h2>Contacto y Ayuda</h2>
     <p>Estamos aquí para responder tus dudas y consultas.</p>
   </section>
@@ -17,8 +30,7 @@
       <li><strong>¿Cuál es la cuenta bancaria para realizar el pago?</strong></li>
       <li><strong>¿Cuánto es el tiempo de espera para la devolución?</strong></li>
       <li><strong>¿Obtengo boleta o factura de forma inmediata?</strong></li>
-      <li><strong>¿Qué quiere decir «Retiro en tienda»?</strong></li>
-      <li><strong>¿Cuáles son los beneficios de comprar con Gorilla Setups?</strong></li>
+      <li><strong>¿Cuáles son los beneficios de comprar con PC STORE?</strong></li>
       <li><strong>¿Cuáles son los métodos de entrega disponibles?</strong></li>
     </ul>
   </section>
