--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- CONFIGURACIÓN BÁSICA DE LA PÁGINA -->
   <meta charset="utf-8" /> <!-- Soporte para acentos y caracteres especiales -->
   <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Adaptación a móviles -->
-  <title>Mi Tienda - Inicio</title> <!-- Título de la pestaña del navegador -->
+  <title>PCSTORE - Inicio</title> <!-- Título de la pestaña del navegador -->
 
   <!-- ARCHIVOS EXTERNOS -->
   <link rel="stylesheet" href="assets/css/style.css" /> <!-- Conexión con el CSS -->
@@ -15,8 +15,8 @@
   <header class="site-header">
     <div class="container header-flex">
       <!-- LOGO -->
-      <img src="img/logo.png" alt="Logo de MiTienda" class="logo-img">
-      <h1 class="logo">MiTienda</h1>
+      <img src="assets/css/img/img1.png" alt="Logo de MiTienda" class="logo-img">
+      <h1 class="logo">PC STORE</h1>
 
       <!-- NAVEGACIÓN PRINCIPAL -->
       <nav class="main-nav">
@@ -58,20 +58,20 @@
   <section class="productos-grid">
     <!-- Cada producto es un bloque -->
     <div class="producto">
-      <img src="img/prod1.jpg" alt="Producto 1">
-      <h3>Producto 1</h3>
-      <p>$10.000</p>
+      <img src="assets/css/img/shopping2.webp" alt="Producto 1">
+      <h3>Placa Madre M-atx X99</h3>
+      <p>$49.990</p>
     </div>
 
     <div class="producto">
-      <img src="img/prod2.jpg" alt="Producto 2">
-      <h3>Producto 2</h3>
-      <p>$15.000</p>
+      <img src="assets/css/img/shoppin.webp" alt="Producto 2">
+      <h3>Disipador para CPU</h3>
+      <p>$14.990</p>
     </div>
 
     <div class="producto">
-      <img src="img/prod3.jpg" alt="Producto 3">
-      <h3>Producto 3</h3>
+      <img src="assets/css/img/shoppi.webp" alt="Producto 3">
+      <h3>Placa Madre E-atx</h3>
       <p>$20.000</p>
     </div>
 
@@ -100,7 +100,7 @@
 
       <!-- COPYRIGHT -->
       <div>
-        <p>&copy; 2025 MiTienda. Todos los derechos reservados.</p>
+        <p>&copy; 2025 PCSTORE. Todos los derechos reservados.</p>
       </div>
     </div>
   </footer>
