--- a/registro.html
+++ b/registro.html
@@ -10,13 +10,19 @@
 <body>
   <!-- HEADER -->
   <header class="site-header">
-    <div class="container">
-      <h1 class="logo">MiTienda</h1>
+    <div class="container">    
+      <h1 class="logo">PC STORE</h1>
       <nav class="main-nav">
         <a href="index.html">Inicio</a>
-        <a href="productos.html">Productos</a>
-        <a href="registro.html" class="active">Registro</a>
+        <a href="productos.html" class="active">Productos</a>
+        <a href="registro.html">Registro</a>
+        <a href="'contacto.html">Contacto</a>
       </nav>
+      <div class="session">
+        <a href="iniciar sesion.html">Iniciar sesión</a> | 
+        <a href="registro.html">Registrar usuario</a>
+        <a href="carrito.html" class="cart">Carrito 🛒 (0)</a> <!-- Carrito con contador -->
+      </div>
     </div>
   </header>
 
