Cambios en los header de productos, registro y contacto.

--- a/contacto.html
+++ b/contacto.html
@@ -1,18 +1,34 @@
-<main class="container">
-  <!-- HERO / título de contacto -->
-  <section class="contact-hero">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+      <header class="site-header">
+    <div class="container header-flex">
+      <!-- LOGO -->
+      <img src="assets/css/img/img1.png" alt="Logo de MiTienda" class="logo-img">
+      <h1 class="logo">PC STORE</h1>
+
+      <!-- NAVEGACIÓN PRINCIPAL -->
+  <section class="contact-hero"></section>
       <nav class="main-nav">
-        <a href="index.html">Inicio</a>
-        <a href="productos.html" class="active">Productos</a>
-        <a href="registro.html">Registro</a>
-        <a href="'contacto.html">Contacto</a>
+        <a href="index.html" class="active">Inicio</a> <!-- Enlace activo (Inicio) -->
+        <a href="productos.html">Productos</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="contacto.html">Contacto</a>
       </nav>
+
+      <!-- SESIÓN Y CARRITO -->
       <div class="session">
         <a href="iniciar sesion.html">Iniciar sesión</a> | 
         <a href="registro.html">Registrar usuario</a>
         <a href="carrito.html" class="cart">Carrito 🛒 (0)</a> <!-- Carrito con contador -->
       </div>
     </div>
+  </header>
     <link rel="stylesheet" href="assets/css/style.css" />
     <h2>Contacto y Ayuda</h2>
     <p>Estamos aquí para responder tus dudas y consultas.</p>
@@ -87,3 +103,5 @@
     </form>
   </section>
 </main>
+</body>
+</html>
