--- a/registro.html
+++ b/registro.html
@@ -10,14 +10,20 @@
 <body>
   <!-- HEADER -->
   <header class="site-header">
-    <div class="container">    
+    <div class="container header-flex">
+      <!-- LOGO -->
+      <img src="assets/css/img/img1.png" alt="Logo de MiTienda" class="logo-img">
       <h1 class="logo">PC STORE</h1>
+
+      <!-- NAVEGACIÓN PRINCIPAL -->
       <nav class="main-nav">
-        <a href="index.html">Inicio</a>
-        <a href="productos.html" class="active">Productos</a>
-        <a href="registro.html">Registro</a>
-        <a href="'contacto.html">Contacto</a>
+        <a href="index.html" class="active">Inicio</a> <!-- Enlace activo (Inicio) -->
+        <a href="productos.html">Productos</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="contacto.html">Contacto</a>
       </nav>
+
+      <!-- SESIÓN Y CARRITO -->
       <div class="session">
         <a href="iniciar sesion.html">Iniciar sesión</a> | 
         <a href="registro.html">Registrar usuario</a>
