cambios en el footer en los html

--- a/contacto.html
+++ b/contacto.html
@@ -103,5 +103,30 @@
     </form>
   </section>
 </main>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <!-- SECCIÓN DE CATEGORÍAS -->
+      <div>
+        <h4>Redes Sociales</h4>
+        <a href="#">Instagram</a><br>
+        <a href="#">Facebook</a><br>
+        <a href="#">Tik Tok</a>
+      </div>
+
+      <!-- SECCIÓN DE NEWSLETTER -->
+      <div>
+        <h4>Newsletter</h4>
+        <form>
+          <input type="email" placeholder="Ingresa tu email">
+          <button type="submit">Suscribirse</button>
+        </form>
+      </div>
+
+      <!-- COPYRIGHT -->
+      <div>
+        <p>&copy; 2025 PCSTORE. Todos los derechos reservados.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
