--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
     <div class="container footer-grid">
       <!-- SECCIÓN DE CATEGORÍAS -->
       <div>
-        <h4>Categorías</h4>
-        <a href="#">Categoría X</a><br>
-        <a href="#">Categoría Y</a><br>
-        <a href="#">Categoría Z</a>
+        <h4>Redes Sociales</h4>
+        <a href="#">Instagram</a><br>
+        <a href="#">Facebook</a><br>
+        <a href="#">Tik Tok</a>
       </div>
 
       <!-- SECCIÓN DE NEWSLETTER -->
