--- a/productos.html
+++ b/productos.html
@@ -86,9 +86,30 @@
   <!-- === FOOTER === -->
   <!-- Contiene información de derechos de autor y contacto -->
   <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 PCSTORE. Todos los derechos reservados.</p>
+    <div class="container footer-grid">
+      <!-- SECCIÓN DE CATEGORÍAS -->
+      <div>
+        <h4>Redes Sociales</h4>
+        <a href="#">Instagram</a><br>
+        <a href="#">Facebook</a><br>
+        <a href="#">Tik Tok</a>
+      </div>
+
+      <!-- SECCIÓN DE NEWSLETTER -->
+      <div>
+        <h4>Newsletter</h4>
+        <form>
+          <input type="email" placeholder="Ingresa tu email">
+          <button type="submit">Suscribirse</button>
+        </form>
+      </div>
+
+      <!-- COPYRIGHT -->
+      <div>
+        <p>&copy; 2025 PCSTORE. Todos los derechos reservados.</p>
+      </div>
     </div>
   </footer>
 </body>
 </html>
+
