Guardo mis cambios antes de actualizar desde GitHub

--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,8 @@
 <main class="container">
   <!-- HERO / título de contacto -->
   <section class="contact-hero">
+    <a href="index.html" class="active">Inicio</a> <!-- Enlace activo (Inicio) -->
+    <link rel="stylesheet" href="assets/css/style.css" />
     <h2>Contacto y Ayuda</h2>
     <p>Estamos aquí para responder tus dudas y consultas.</p>
   </section>
@@ -17,8 +19,7 @@
       <li><strong>¿Cuál es la cuenta bancaria para realizar el pago?</strong></li>
       <li><strong>¿Cuánto es el tiempo de espera para la devolución?</strong></li>
       <li><strong>¿Obtengo boleta o factura de forma inmediata?</strong></li>
-      <li><strong>¿Qué quiere decir «Retiro en tienda»?</strong></li>
-      <li><strong>¿Cuáles son los beneficios de comprar con Gorilla Setups?</strong></li>
+      <li><strong>¿Cuáles son los beneficios de comprar con PC STORE?</strong></li>
       <li><strong>¿Cuáles son los métodos de entrega disponibles?</strong></li>
     </ul>
   </section>
