--- a/registro.html
+++ b/registro.html
@@ -10,12 +10,13 @@
 <body>
   <!-- HEADER -->
   <header class="site-header">
-    <div class="container">
-      <h1 class="logo">MiTienda</h1>
+    <div class="container">    
+      <h1 class="logo">PC STORE</h1>
       <nav class="main-nav">
         <a href="index.html">Inicio</a>
         <a href="productos.html">Productos</a>
         <a href="registro.html" class="active">Registro</a>
+        <a href="contacto.html">Contacto</a>
       </nav>
     </div>
   </header>
