cambio en html contacto

--- a/nosotros.html
+++ b/nosotros.html
@@ -52,14 +52,14 @@
       <div class="team-grid">
         <!-- Puedes añadir tarjetas de miembros del equipo -->
         <div class="team-member">
-          <img src="d:\Descargas\momoingeniero.jpg" alt="Miembro del equipo">
+          <img src="assets/css/img/momoingeniero.jpg" alt="Miembro del equipo">
           <h3>Juan Pérez</h3>
           <p>Fundador & Especialista en Hardware</p>
         </div>
         <div class="team-member">
-          <img src="assets/css/img/team2.jpg" alt="Miembro del equipo">
+          <img src="assets/css/img/nayita.avif" alt="Miembro del equipo">
           <h3>María López</h3>
-          <p>Gerente de Ventas</p>
+          <p>Gerente de Ventas & Especialista en Marketing</p>
         </div>
         <!-- Añadir más miembros si deseas -->
       </div>
