implementacion de codigo de java para los html de productos y carrito para que estos al momento de seleccionar el producto se pueda ver en el carrio de compra

--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto - PC STORE</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script defer src="assets/css/js/script.js"></script>
 </head>
 <body>
   <!-- HEADER -->
@@ -44,7 +45,7 @@
     <h3>Preguntas Frecuentes</h3>
     <ul>
       <li><strong>Horario Atención:</strong> Lunes - Viernes 10:00 a 19:00hrs, Sábado 10:00 a 17:00hrs, Colación 14:30 - 15:30hrs</li>
-      <li><strong>¿Cuáles son los tiempos de espera y despacho?</strong> 4 a 10 días hábiles una vez completada la compra, luego fase de testeo de 72h, envío pagado por parte de Gorilla Setups.</li>
+      <li><strong>¿Cuáles son los tiempos de espera y despacho?</strong> 4 a 10 días hábiles una vez completada la compra, luego fase de testeo de 72h, envío pagado por parte de PC STORE.</li>
       <li><strong>¿Cómo funciona el sistema de órdenes para las Build?</strong></li>
       <li><strong>¿Cuáles son los medios de pago?</strong></li>
       <li><strong>¿Cómo funciona el sistema de reembolso?</strong></li>
