--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- ARCHIVOS EXTERNOS -->
   <link rel="stylesheet" href="assets/css/style.css" /> <!-- Conexión con el CSS -->
-  <script defer src="assets/js/script.js"></script> <!-- Conexión con el JavaScript -->
+  <script defer src="assets/css/js/script.js"></script>
 </head>
 <body>
   <!-- ================== HEADER ================== -->
@@ -54,7 +54,9 @@
   </main>
 
   <!-- ================== PRODUCTOS DESTACADOS ================== -->
+    <h2 class="titulo-productos">Productos Destacados</h2>
   <section class="productos-grid">
+
     <!-- Cada producto es un bloque -->
     <div class="producto">
       <img src="assets/css/img/shopping2.webp" alt="Producto 1">
