--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carrito – MiTienda</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <script defer src="assets/js/carrito.js"></script>
+  <script defer src="assets/css/js/script.js"></script>
 </head>
 <body>
   <!-- HEADER -->
