--- a/registro.html
+++ b/registro.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mi cuenta</title>
   <link rel="stylesheet" href="assets/css/style.css" />
-  <script defer src="assets/js/script.js"></script>
+  <script defer src="assets/css/js/script.js"></script>
 </head>
 <body>
   <!-- HEADER -->
