incorporacion de script para la creacion de cuenta y se añadieron imagenes a index y productos

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <!-- CONFIGURACIÓN BÁSICA DE LA PÁGINA -->
-  <meta charset="utf-8" /> <!-- Soporte para acentos y caracteres especiales -->
-  <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Adaptación a móviles -->
-  <title>PCSTORE - Inicio</title> <!-- Título de la pestaña del navegador -->
+<!-- CONFIGURACIÓN BÁSICA DE LA PÁGINA -->
+<meta charset="utf-8" /> <!-- Soporte para acentos y caracteres especiales -->
+<meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Adaptación a móviles -->
+<title>PCSTORE - Inicio</title> <!-- Título de la pestaña del navegador -->
 
-  <!-- ARCHIVOS EXTERNOS -->
-  <link rel="stylesheet" href="assets/css/style.css" /> <!-- Conexión con el CSS -->
-  <script defer src="assets/css/js/script.js"></script>
+ <!-- ARCHIVOS EXTERNOS -->
+ <link rel="stylesheet" href="assets/css/style.css" /> <!-- Conexión con el CSS -->
+ <script defer src="assets/css/js/script.js"></script>
 </head>
 <body>
-  <!-- ================== HEADER ================== -->
-  <header class="site-header">
-    <div class="container header-flex">
-      <!-- LOGO -->
-      <img src="assets/css/img/img1.png" alt="Logo de MiTienda" class="logo-img">
-      <h1 class="logo">PC STORE</h1>
+ <!-- ================== HEADER ================== -->
+ <header class="site-header">
+ <div class="container header-flex">
+ <!-- LOGO -->
+   <img src="assets/css/img/img1.png" alt="Logo de MiTienda" class="logo-img">
+ <h1 class="logo">PC STORE</h1>
 
       <!-- NAVEGACIÓN PRINCIPAL -->
       <nav class="main-nav">
@@ -40,8 +40,8 @@
     <section class="hero">
       <!-- TEXTO DE PRESENTACIÓN -->
       <div class="hero-text">
-        <h2>TIENDA ONLINE</h2>
-        <p>Descubre nuestras últimas ofertas y productos destacados.</p>
+        <h2>TIENDA ONLINE PC STORE</h2>
+        <p>Descubre nuestras mejores ofertas y productos destacados a los mejores precios.</p>
         <!-- BOTÓN QUE REDIRIGE A PRODUCTOS -->
         <a href="productos.html" class="btn">Ver productos</a>
       </div>
@@ -76,8 +76,14 @@
       <p>$20.000</p>
     </div>
 
-    <!-- Aquí puedes seguir agregando más productos -->
+    <div class="producto">
+      <img src="assets/css/img/sh.webp" alt="Producto ">
+      <h3>Combo Setup Gamer: PC Warrior 3050, Monitor, Silla gamer, Alfombra, y periférico</h3>
+      <p>$499.990</p>
+    </div>
   </section>
+
+          <a href="productos.html" class="btn">Ver productos</a>
 
   <!-- ================== FOOTER ================== -->
   <footer class="site-footer">
@@ -106,4 +112,4 @@
     </div>
   </footer>
 </body>
-</html>
+</html> 
