--- a/productos.html
+++ b/productos.html
@@ -20,7 +20,7 @@
             </nav>
 
             <div class="session">
-                <a href="iniciar-sesion.html">Iniciar sesión</a> | 
+                <a href="iniciar sesion.html">Iniciar sesión</a> | 
                 <a href="registro.html">Registrar usuario</a>
                 <a href="carrito.html" class="cart">Carrito 🛒 (0)</a> </div>
         </div>
@@ -87,6 +87,36 @@
                 <p class="price precio-producto">$219.990</p>
                 <button type="button" class="btn-agregar">Agregar al carrito</button>
             </article> 
+
+            <article class="card" data-id="9">
+                <img src="assets/css/img/shopping2.webp" alt="Placa Madre M-atx X99" />
+                <h3 class="nombre-producto">Placa Madre M-atx X99</h3>
+                <p class="price precio-producto">$49.990</p>
+                <button type="button" class="btn-agregar">Agregar al carrito</button>
+            </article>
+
+            <article class="card" data-id="10">
+                <img src="assets/css/img/shoppin.webp" alt="Disipador para CPU" />
+                <h3 class="nombre-producto">Disipador para CPU</h3>
+                <p class="price precio-producto">$14.990</p>
+                <button type="button" class="btn-agregar">Agregar al carrito</button>
+            </article>
+
+            <article class="card" data-id="11">
+                <img src="assets/css/img/shoppi.webp" alt="Placa Madre E-atx" />
+                <h3 class="nombre-producto">Placa Madre E-atx</h3>
+                <p class="price precio-producto">$20.000</p>
+                <button type="button" class="btn-agregar">Agregar al carrito</button>
+            </article>
+
+            <article class="card" data-id="12">
+                <img src="assets/css/img/sh.webp" alt="Combo Setup Gamer: PC Warrior 3050, Monitor, Silla gamer, Alfombra, y periférico" />
+                <h3 class="nombre-producto">Combo Setup Gamer: PC Warrior 3050, Monitor, Silla gamer, Alfombra, y periférico</h3>
+                <p class="price precio-producto">$499.990</p>
+                <button type="button" class="btn-agregar">Agregar al carrito</button>
+            </article>
+
+            
         </section>
     </main>
 
