--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
 
       <!-- SESIÓN Y CARRITO -->
       <div class="session">
-        <a href="iniciar-sesion.html">Iniciar sesión</a> | 
+        <a href="iniciar sesion.html">Iniciar sesión</a> | 
         <a href="registro.html">Registrar usuario</a>
         <a href="carrito.html" class="cart">Carrito 🛒 (0)</a>
       </div>
