--- a/iniciar sesion.html
+++ b/iniciar sesion.html
@@ -22,7 +22,7 @@
       </nav>
 
       <div class="session">
-        <a href="iniciar-sesion.html" class="active">Iniciar sesión</a> | 
+        <a href="iniciar sesion.html" class="active">Iniciar sesión</a> | 
         <a href="registro.html">Registrar usuario</a>
         <a href="carrito.html" class="cart">Carrito 🛒 (0)</a>
       </div>
