--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,7 @@
         <a href="contacto.html">Contacto</a>
       </nav>
       <div class="session">
-        <a href="iniciar-sesion.html">Iniciar sesión</a> |
+        <a href="iniciar sesion.html">Iniciar sesión</a> |
         <a href="registro.html">Registrar usuario</a>
         <a href="carrito.html" class="cart">Carrito 🛒 (0)</a>
       </div>
